Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 <body>
     <div class="menu">
         <h2>🏗️ 请选择您的姓名</h2>
-        <a href="ybb.html" class="btn">尹兵兵 (钢网架/屋面)</a>
-        <a href="zqf.html" class="btn">张庆逢 (预制构件)</a>
-        <a href="wft.html" class="btn">王富团 (人员出勤)</a>
+        <a href="ybb.html" class="btn">尹兵兵 </a>
+        <a href="zqf.html" class="btn">张庆逢 </a>
+        <a href="wft.html" class="btn">王富团 </a>
         <div class="footer">提示：填完后请生成图片转发</div>
     </div>
 </body>
+
 </html>
