--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <a href="ybb.html" class="btn">尹兵兵 </a>
         <a href="zqf.html" class="btn">张庆逢 </a>
         <a href="wft.html" class="btn">王富团 </a>
-        <div class="footer">提示：填完后请生成图片转发</div>
+        <a href="1.html" class="btn">预制构件统计 </a>
     </div>
 </body>
 
 </html>
+
